import java.time.LocalDateTime;
import java.util.*;

public class ClockTimer extends Observable{
  private Timer timer;
  private LocalDateTime dateTime;

  public void startTime(){

  }

  public void tick(){

  }

}